# kvasir

./: Cargo.toml  NOTICE  PARITY.md  README.md
.github/workflows/: ci.yml
bindings/python/kvasir/kfs/: Axiom.py  AxiomKind.py  ClassAssertion.py  DisjointClasses.py  EquivalentToIntersection.py  FactStream.py  SubClassOf.py  SubClassOfExistential.py
kvasir-check/: Cargo.toml
kvasir-check/src/: lib.rs
kvasir-cli/: Cargo.toml
kvasir-cli/src/: census.rs  ddl.rs  main.rs  shapes.rs  verbalise.rs
kvasir-cli/src/manchester/: expr.rs  frames.rs  lexer.rs  lower.rs  mod.rs
kvasir-core/: Cargo.toml
kvasir-core/src/: fragment.rs  kfsb.rs  lib.rs  saturate.rs  verdict.rs
schemas/: kfs.fbs
tests/vectors/: dual_grounding.kfs
