[workspace]
resolver = "2"
members = ["kvasir-core", "kvasir-check", "kvasir-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/zndx/kvasir"
authors = ["zndx"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = "thin"
codegen-units = 1
