[package]
name = "kvasir-core"
description = "Fragment gate, semi-naive saturation, and proof-DAG emission for the kvasir reasoner"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
flatbuffers = "25"
